--- a/scenarioA/services/my-account/MSCA/lobby-wax.html
+++ b/scenarioA/services/my-account/MSCA/lobby-wax.html
@@ -203,20 +203,20 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
             <li> <a href="#section1" class="item">Employment Insurance</a>
               <ul class="sm list-unstyled" id="section1" role="menu">
                 <!--<li><a href="###">Status of my EI claim/application</a></li>-->
-                <li><a href="###">Payment information</a></li>
-                 <li><a href="###">Records of Employment</a></li>
-				  <li><a href="###">Latest EI claim details</a></li>
+                <li><a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/EI-payment-page.html">Payment information</a></li>
+                 <li><a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/records-of-employment.html">Records of Employment</a></li>
+				  <li><a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/latest-claim-details.html">Latest EI claim details</a></li>
                
                 <li><a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/landing-page-ei.html">Employment Insurance - More</a></li>
               </ul>
             </li>
             <li> <a href="#section2" class="item">Canada Pension Plan/Old Age Security</a>
               <ul class="sm list-unstyled" id="section2" role="menu">
-                <li> <a href="###"> Payment information </a> </li>
-				  <li> <a href="###"> CPP contributions </a> </li>
+                <li> <a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/Payment-Info.html"> Payment information </a> </li>
+				  <li> <a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/CPP-Contributions.html"> CPP contributions </a> </li>
                 
                 <!--<li> <a href="###"> Estimated monthly CPP benefits </a> </li>-->
-                <li> <a href="###"> Application status </a> </li>
+                <li> <a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/Application-status.html"> Application status </a> </li>
                 <li> <a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/landing-page-cpp-oas.html"> Canada Pension Plan/Old Age Security - More </a> </li>
               </ul>
             </li>
