--- a/scenarioA/services/my-account/MSCA/landing-page-cpp-oas.html
+++ b/scenarioA/services/my-account/MSCA/landing-page-cpp-oas.html
@@ -253,7 +253,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
         <ul class="list-group">
           <li class="list-group-item"><a href="#a1-1">CPP Applications</a></li>
           <li class="list-group-item"><a href="#a1-2">OAS/GIS Pension Applications</a></li>
-           <li class="list-group-item"><a href="#a1-6">CRP Application</a></li>
+           <li class="list-group-item"><a href="#a1-6">Child-Rearing Provision Application</a></li>
 			<li class="list-group-item"><a href="#a1-7">Tax information</a></li>
 			<li class="list-group-item"><a href="#a1-3">View/Change</a></li>
           <li class="list-group-item"><a href="#a1-4">Payments</a></li>
@@ -320,7 +320,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
 		<div class="panel panel-default">
         <div class="panel-body">
           <div class="mrgn-tp-md header-bg">
-            <h2 id="a1-6" class="mrgn-tp-0">CRP Application&nbsp;</h2>
+            <h2 id="a1-6" class="mrgn-tp-0">Child-Rearing Provision Application&nbsp;</h2>
             <div class="brdr-bttm-fade"></div>
           </div>
           <br />
