--- a/scenarioA/services/my-account/MSCA/lobby-wax.html
+++ b/scenarioA/services/my-account/MSCA/lobby-wax.html
@@ -254,9 +254,9 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
 	<section class="alert alert-info">
   <h2 class="h3">Tax slips</h2>
 
-<p>T4E, T4A and NR4 tax slips are now available <strong>online</strong> through My  Service Canada Account (MSCA) under the Tax information section of Employment  Insurance (EI) and Canada Pension Plan (CPP) / Old Age Security (OAS). <strong>Paper tax slips</strong> were mailed before the <strong>end of February</strong>.</p>
+<p>T4E, T4A and NR4 tax slips for 2019 are now available <strong>online</strong> under the Tax information section of Employment  Insurance (EI) and Canada Pension Plan (CPP) / Old Age Security (OAS). <strong>Paper tax slips</strong> were mailed before the <strong>end of February</strong>.</p>
 		<h3 class="h4">Verify your address</h3>
-  <p>Please check that your mailing address is correct in MSCA  under the View/Change section of EI and CPP / OAS.&nbsp;</p>
+  <p>Please check that your mailing address is correct in My  Service Canada Account (MSCA)  under the View/Change section of EI and CPP / OAS.&nbsp;</p>
 </section>
 
   <section>
