--- a/scenarioA/services/my-account/MSCA/landing-page-cpp-oas.html
+++ b/scenarioA/services/my-account/MSCA/landing-page-cpp-oas.html
@@ -353,12 +353,12 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
             <div class="brdr-bttm-fade"></div>
           </div>
           <br />
-          <p>Personal information is used to capture your mailing address, province of residence and your preferred language specific to your CPP application(s). All correspondance will be sent to the address you've provided.</p>
+          <p>Personal information is used to capture your mailing address, province of residence and your preferred language specific to your CPP application(s). All correspondence will be sent to the address you've provided.</p>
           <ul class="list-unstyled list-inline">
-				<li class="mrgn-bttm-sm"><button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/CPP-OAS/My-Contact/My-address.html';" type="button" class="btn btn-default">Address</button></li>
+			<li class="mrgn-bttm-sm"><button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/CPP-OAS/My-Contact/My-address.html';" type="button" class="btn btn-default">Address</button></li>
           <li class="mrgn-bttm-sm"><button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/CPP-OAS/My-Contact/My-telephone.html';" type="button" class="btn btn-default">Telephone number</button></li>
          <li class="mrgn-bttm-sm"> <button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/direct-deposit-CPP-OAS.html';" type="button" class="btn btn-default">Direct deposit (CPP/OAS)</button></li>
-			</ul>
+		  </ul>
         </div>
       </div>
       <div class="panel panel-default">
