--- a/scenarioA/services/my-account/MSCA/landing-page-cpp-oas.html
+++ b/scenarioA/services/my-account/MSCA/landing-page-cpp-oas.html
@@ -385,7 +385,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
           <ul class="list-unstyled list-inline">
 				<li class="mrgn-bttm-sm"><button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/CPP-Contributions.html';" type="button" class="btn btn-default">CPP contributions</button></li>
 			  <li class="mrgn-bttm-sm"><button onclick="window.location.href = '#';" type="button" class="btn btn-default">Statement of Contributions by mail</button></li>
-			  <li class="mrgn-bttm-sm"><button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/estimated-monthly-cpp-benefits.html';" type="button" class="btn btn-default">View my estimated monthly CPP benefits</button></li>
+			  <li class="mrgn-bttm-sm"><button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/estimated-monthly-cpp-benefits.html';" type="button" class="btn btn-default">Estimated monthly CPP benefits</button></li>
 			</ul>
         </div>
       </div>
