--- a/scenarioA/services/my-account/MSCA/landing-page-ei.html
+++ b/scenarioA/services/my-account/MSCA/landing-page-ei.html
@@ -280,7 +280,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
       </div>
     </div>
     <div class="col-xs-12 col-md-9">
-      <p>On this page, you  can get information on your Employment Insurance (EI) claims. During our hours  of operation, you can also manage your account, by;</p>
+      <p>On this page, you  can get information on your Employment Insurance (EI) claims.You can also manage your account, by;</p>
       <ul>
         <li>updating your contact information;</li>
         <li>modifying your direct deposit information;</li>
@@ -316,7 +316,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
               <div class="brdr-bttm-fade"></div>
             </div>
             <br />
-            <p>In this section,  you can check or modify your mailing address, telephone number, direct deposit  information and preferred language. <a name="4"></a>Modifications can only be done  during the hours of operation in your province or territory.</p>
+            <p>In this section,  you can check or modify your mailing address, telephone number, direct deposit  information and preferred language. Modifications can only be done directly in My Service Canada Account - EI during the hours of operation in your province or territory.</p>
 <details>
               <summary><!--Service times-->Hours of operation for your Province or Territory</summary>
               <ul>
