--- a/scenarioA/services/my-account/MSCA/landing-page-cpp-oas.html
+++ b/scenarioA/services/my-account/MSCA/landing-page-cpp-oas.html
@@ -320,7 +320,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
 		<div class="panel panel-default">
         <div class="panel-body">
           <div class="mrgn-tp-md header-bg">
-            <h2 id="a1-6" class="mrgn-tp-0">Child-Rearing Provision Application&nbsp;</h2>
+            <h2 id="a1-6" class="mrgn-tp-0">Child-Rearing Provision&nbsp;</h2>
             <div class="brdr-bttm-fade"></div>
           </div>
           <br />
@@ -338,22 +338,22 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
             <div class="brdr-bttm-fade"></div>
           </div>
           <br />
-          <p>Consider your overall tax situation before you choose to have federal tax deducted from your CPP and OAS monthly benefits. You can change the amount of federal taxes deducted at any time.</p>
+          <p>Tax slips (T4A(P), T4A(OAS) and NR4) lets you check  and print T4s for the last 6 years if you received CPP and or OAS  benefits. Tax slip mailing options lets you choose to receive your T4  electronically or by mail. You can later change the option and still check and  print T4s.</p>
           <ul class="list-unstyled list-inline">
-				<li class="mrgn-bttm-sm"><button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/CPP-OAS/Tax-For-CPP-OAS/Tax-Slips-T4A-NR4.html';" type="button" class="btn btn-default">Tax slips (T4A, NR4)</button></li>
+			<li class="mrgn-bttm-sm"><button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/CPP-OAS/Tax-For-CPP-OAS/Tax-Slips-T4A-NR4.html';" type="button" class="btn btn-default">Tax slips (T4A, NR4)</button></li>
          <li class="mrgn-bttm-sm"> <button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/Tax_Slips/Tax-Slips-Mailing.html';" type="button" class="btn btn-default">Tax slip mailing options</button></li>
           <li class="mrgn-bttm-sm"><button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/CPP-OAS/Tax-For-CPP-OAS/OAS/Federal-Voluntary-Tax-Deduction.html';" type="button" class="btn btn-default">Federal voluntary tax deductions for CPP/OAS</button></li>
-			</ul>
+		  </ul>
         </div>
       </div>
       <div class="panel panel-default">
         <div class="panel-body">
           <div class="mrgn-tp-md header-bg">
-            <h2 id="a1-3" class="mrgn-tp-0">View/Change</h2>
+            <h2 id="a1-3" class="mrgn-tp-0">View/Change my Personal Information</h2>
             <div class="brdr-bttm-fade"></div>
           </div>
           <br />
-          <p>Personal information is used to capture your mailing address, province of residence and your preferred language specific to your CPP application(s). All correspondence will be sent to the address you've provided.</p>
+          <p>In this section, you can check or modify your mailing  address, telephone number and direct deposit information.</p>
           <ul class="list-unstyled list-inline">
 			<li class="mrgn-bttm-sm"><button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/CPP-OAS/My-Contact/My-address.html';" type="button" class="btn btn-default">Address</button></li>
           <li class="mrgn-bttm-sm"><button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/CPP-OAS/My-Contact/My-telephone.html';" type="button" class="btn btn-default">Telephone number</button></li>
@@ -368,9 +368,9 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
             <div class="brdr-bttm-fade"></div>
           </div>
           <br />
-          <p>The payment and direct deposit is used to view your most up-to-date payment reports.</p>
+          <p>In this section,  you can view your CPP and OAS Payment Information.</p>
           <ul class="list-unstyled list-inline">
-				<li class="mrgn-bttm-sm"><button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/Payment-Info.html';" type="button" class="btn btn-default">Payment information</button></li>
+			<li class="mrgn-bttm-sm"><button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/Payment-Info.html';" type="button" class="btn btn-default">Payment information</button></li>
 		  </ul>
         </div>
       </div>
@@ -384,7 +384,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
           <p>This page allows you to view your contributions, pensionable earnings, and view your estimated monthly CPP benefits. You can also request a Statement of Contributions by mail.</p>
           <ul class="list-unstyled list-inline">
 				<li class="mrgn-bttm-sm"><button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/CPP-Contributions.html';" type="button" class="btn btn-default">CPP contributions</button></li>
-			  <li class="mrgn-bttm-sm"><button onclick="window.location.href = 'MSCA-Prototype/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/request-statement.html';" type="button" class="btn btn-default">Statement of Contributions by mail</button></li>
+			  <!--<li class="mrgn-bttm-sm"><button onclick="window.location.href = 'MSCA-Prototype/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/request-statement.html';" type="button" class="btn btn-default">Statement of Contributions by mail</button></li>-->
 			  <li class="mrgn-bttm-sm"><button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/estimated-monthly-cpp-benefits.html';" type="button" class="btn btn-default">Estimated monthly CPP benefits</button></li>
 			</ul>
         </div>
