--- a/scenarioA/services/my-account/MSCA/landing-page-cpp-oas.html
+++ b/scenarioA/services/my-account/MSCA/landing-page-cpp-oas.html
@@ -349,7 +349,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
       <div class="panel panel-default">
         <div class="panel-body">
           <div class="mrgn-tp-md header-bg">
-            <h2 id="a1-3" class="mrgn-tp-0">View/Change my Personal Information</h2>
+            <h2 id="a1-3" class="mrgn-tp-0">View/Change my Personal Information&nbsp;</h2>
             <div class="brdr-bttm-fade"></div>
           </div>
           <br />
