--- a/scenarioA/services/my-account/MSCA/landing-page-ei.html
+++ b/scenarioA/services/my-account/MSCA/landing-page-ei.html
@@ -280,7 +280,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
       </div>
     </div>
     <div class="col-xs-12 col-md-9">
-      <p>On this page, you  can get information on your Employment Insurance (EI) claims.You can also manage your account, by;</p>
+      <p>On this page, you  can get information on your Employment Insurance (EI) claims. You can also manage your account by:</p>
       <ul>
         <li>updating your contact information;</li>
         <li>modifying your direct deposit information;</li>
