--- a/scenarioA/services/my-account/MSCA/lobby-wax.html
+++ b/scenarioA/services/my-account/MSCA/lobby-wax.html
@@ -269,7 +269,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
       <div class="h3 mrgn-tp-md text-center">Employment Insurance</div>
       </a> </div>
 	  
-    <div class="xs-mrgn-tp-10 xs-mrg-bttm-10"> 
+    <div class="mrgn-tp-md mrg-bttm-md"> 
 		<a class="col-xs-9 col-md-5 col-md-offset-1 brdr-lft brdr-rght brdr-tp brdr-bttm btn" href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/landing-page-cpp-oas.html">
       <div class="h3 mrgn-tp-md text-center">Canada Pension Plan / Old Age Security</div>
       </a> </div>
