--- a/scenarioA/services/my-account/MSCA/lobby-wax.html
+++ b/scenarioA/services/my-account/MSCA/lobby-wax.html
@@ -264,15 +264,18 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
       <div class="brdr-bttm-fade"></div>
     </div>
 	  <br />
-    <div> 
-		<a class="col-xs-9 col-md-5 brdr-lft brdr-rght brdr-tp brdr-bttm btn" href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/landing-page-ei.html">
+    <div class="row mrgn-tp-lg">
+    <div class="col-xs-9 col-md-6 mrgn-bttm-md"> 
+		<a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/landing-page-ei.html" class="brdr-lft brdr-rght brdr-tp brdr-bttm btn full-width">
       <div class="h3 mrgn-tp-md text-center">Employment Insurance</div>
       </a> </div>
 	  
-    <div class="mrgn-tp-lg mrg-bttm-lg"> 
-		<a class="col-xs-9 col-md-5 col-md-offset-1 brdr-lft brdr-rght brdr-tp brdr-bttm btn" href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/landing-page-cpp-oas.html">
+    <div class="col-xs-9 col-md-6"> 
+		<a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/landing-page-cpp-oas.html" class="brdr-lft brdr-rght brdr-tp brdr-bttm btn full-width">
       <div class="h3 mrgn-tp-md text-center">Canada Pension Plan / Old Age Security</div>
       </a> </div>
+      
+  </div> 
   </section>
 	
   <div class="row">
