--- a/scenarioA/services/my-account/MSCA/lobby-wax.html
+++ b/scenarioA/services/my-account/MSCA/lobby-wax.html
@@ -264,7 +264,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
       <div class="brdr-bttm-fade"></div>
     </div>
 	  <br />
-    <div class="row mrgn-tp-lg">
+    <div class="row mrgn-tp-md">
     <div class="col-xs-9 col-md-6 mrgn-bttm-md"> 
 		<a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/landing-page-ei.html" class="brdr-lft brdr-rght brdr-tp brdr-bttm btn full-width">
       <div class="h3 mrgn-tp-md text-center">Employment Insurance</div>
@@ -279,7 +279,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
   </section>
 	
   <div class="row">
-  <aside style="padding-top:90px; padding-left:10px;">
+  <aside style="padding-left:10px;">
   <div class="mrgn-tp-lg header-bg">
     <h2>Other services</h2>
     <div class="brdr-bttm-fade"></div>
