--- a/scenarioA/services/my-account/MSCA/landing-page-cpp-oas.html
+++ b/scenarioA/services/my-account/MSCA/landing-page-cpp-oas.html
@@ -239,10 +239,10 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
 <section class="container">
 <main class="container" property="mainContentOfPage" role="main"><span id="pageTemplate:j_id__ctru6pc6" class="af_panelGroupLayout">
   <h1 property="name" id="wb-cont" dir="ltr">Canada Pension Plan/Old Age Security</h1>
-  <section class="alert alert-warning">
+  <!--<section class="alert alert-warning">
     <h2 class="h3">Attention</h2>
     <p>Please be advised that this service will be unavailable from 6:00 a.m. to 8:00 a.m. on Sunday, March 17, 2019 (Eastern Time) to permit system maintenance. We apologize for any inconvenience. </p>
-  </section>
+  </section>-->
   <div class="row">
     <div class="col-xs-12 col-md-3 pull-right ">
       <div class="panel panel-default"> 
