--- a/scenarioA/services/my-account/MSCA/landing-page-ei-fr.html
+++ b/scenarioA/services/my-account/MSCA/landing-page-ei-fr.html
@@ -247,14 +247,14 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
     <div class="col-xs-12 col-md-3 pull-right">
       <div class="panel panel-default"> 
         <!-- Default panel contents -->
-        <div class="panel-heading"><strong>On this page</strong></div>
+        <div class="panel-heading"><strong>Sur cette page</strong></div>
         
         <!-- List group -->
         <ul class="list-group">
           <li class="list-group-item"><a href="#a1-1">Informations sur votre dernière réclamation</a></li>
-          <li class="list-group-item"><a href="#a1-2">Afficher/modifier mes informations personnelles</a></li>
+          <li class="list-group-item"><a href="#a1-2">Visualiser/Modifier mes informations personnelles</a></li>
           <li class="list-group-item"><a href="#a1-3">Relevés d'emploi</a></li>
-          <li class="list-group-item"><a href="#a1-4">Feuillets d'impôt</a></li>
+          <li class="list-group-item"><a href="#a1-4">Renseignements fiscaux</a></li>
           <li class="list-group-item"><a href="#a1-5">Demandes antérieures</a></li>
           <li class="list-group-item"><a href="#a1-6">Formulaires en ligne</a></li>
           <li class="list-group-item"><a href="#a1-7">Travailleurs autonomes</a></li>
@@ -264,7 +264,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
       </div>
       <div class="panel panel-default"> 
         <!-- Default panel contents -->
-        <div class="panel-heading"><strong>Related services and information</strong></div>
+        <div class="panel-heading"><strong>Services et informations connexes</strong></div>
         
         <!-- List group -->
         <ul class="list-group">
@@ -312,7 +312,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
         <div class="panel panel-default">
           <div class="panel-body">
             <div class="mrgn-tp-md header-bg">
-              <h2 id="a1-2" class="mrgn-tp-0">Afficher/modifier mes informations personnelles&nbsp;</h2>
+              <h2 id="a1-2" class="mrgn-tp-0">Visualiser/Modifier mes informations personnelles&nbsp;</h2>
               <div class="brdr-bttm-fade"></div>
             </div>
             <br />
@@ -356,7 +356,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
       <div class="panel panel-default">
         <div class="panel-body">
 			<div class="mrgn-tp-md header-bg">
-              <h2 id="a1-4" class="mrgn-tp-0">Feuillets d'impôt</h2>
+              <h2 id="a1-4" class="mrgn-tp-0">Renseignements fiscaux</h2>
               <div class="brdr-bttm-fade"></div>
             </div>
             <br />
