--- a/scenarioA/services/my-account/MSCA/landing-page-ei.html
+++ b/scenarioA/services/my-account/MSCA/landing-page-ei.html
@@ -161,7 +161,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
         <section id="wb-lng" class="text-right col-xs-3 col-sm-4 col-md-6">
           <h2 class="wb-inv">Language selection</h2>
           <ul class="list-inline margin-bottom-none">
-            <li><a lang="fr" href="###">Français</a></li>
+            <li><a lang="fr" href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/landing-page-cpp-oas-fr.html">Français</a></li>
           </ul>
         </section>
       </div>
@@ -254,7 +254,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
           <li class="list-group-item"><a href="#a1-1">Information on your latest claim</a></li>
           <li class="list-group-item"><a href="#a1-2">View/Change my Personal Information</a></li>
           <li class="list-group-item"><a href="#a1-3">Records of Employment</a></li>
-          <li class="list-group-item"><a href="#a1-4">Tax slips</a></li>
+          <li class="list-group-item"><a href="#a1-4">Tax information</a></li>
           <li class="list-group-item"><a href="#a1-5">Past claims</a></li>
           <li class="list-group-item"><a href="#a1-6">eForms</a></li>
           <li class="list-group-item"><a href="#a1-7">Self-employed</a></li>
