--- a/scenarioA/services/my-account/MSCA/landing-page-cpp-oas.html
+++ b/scenarioA/services/my-account/MSCA/landing-page-cpp-oas.html
@@ -161,7 +161,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
         <section id="wb-lng" class="text-right col-xs-3 col-sm-4 col-md-6">
           <h2 class="wb-inv">Language selection</h2>
           <ul class="list-inline margin-bottom-none">
-            <li><a lang="fr" href="###">Français</a></li>
+            <li><a lang="fr" href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/landing-page-cpp-oas-fr.html">Français</a></li>
           </ul>
         </section>
       </div>
@@ -253,9 +253,9 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
         <ul class="list-group">
           <li class="list-group-item"><a href="#a1-1">CPP Applications</a></li>
           <li class="list-group-item"><a href="#a1-2">OAS/GIS Pension Applications</a></li>
-           <li class="list-group-item"><a href="#a1-6">Child-Rearing Provision Application</a></li>
+           <li class="list-group-item"><a href="#a1-6">Child-Rearing Provision</a></li>
 			<li class="list-group-item"><a href="#a1-7">Tax information</a></li>
-			<li class="list-group-item"><a href="#a1-3">View/Change</a></li>
+			<li class="list-group-item"><a href="#a1-3">View/Change my Personal Information</a></li>
           <li class="list-group-item"><a href="#a1-4">Payments</a></li>
 			<li class="list-group-item"><a href="#a1-5">Contributions</a></li>
           <li class="list-group-item"><a href="#a1-8">Consent</a></li>
