--- a/scenarioA/services/my-account/MSCA/landing-page-ei-fr.html
+++ b/scenarioA/services/my-account/MSCA/landing-page-ei-fr.html
@@ -356,7 +356,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
       <div class="panel panel-default">
         <div class="panel-body">
 			<div class="mrgn-tp-md header-bg">
-              <h2 id="a1-4" class="mrgn-tp-0">Renseignements fiscaux</h2>
+              <h2 id="a1-4" class="mrgn-tp-0">Renseignements fiscaux&nbsp;</h2>
               <div class="brdr-bttm-fade"></div>
             </div>
             <br />
@@ -371,7 +371,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
       <div class="panel panel-default">
         <div class="panel-body">
 		  <div class="mrgn-tp-md header-bg">
-              <h2 id="a1-5" class="mrgn-tp-0">Demandes antérieures</h2>
+              <h2 id="a1-5" class="mrgn-tp-0">Demandes antérieures&nbsp;</h2>
               <div class="brdr-bttm-fade"></div>
           </div>
             <p>Les demandes de prestations passées affichent les demandes d'assurance-emploi antérieures. Vous pouvez sélectionner une réclamation pour des informations spécifiques, y compris les détails de paiement.</p>
@@ -383,7 +383,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
       <div class="panel panel-default">
         <div class="panel-body">
 			<div class="mrgn-tp-md header-bg">
-              <h2 id="a1-6" class="mrgn-tp-0">Formulaires en ligne</h2>
+              <h2 id="a1-6" class="mrgn-tp-0">Formulaires en ligne&nbsp;</h2>
               <div class="brdr-bttm-fade"></div>
             </div>
             <br />
@@ -396,7 +396,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
       <div class="panel panel-default">
         <div class="panel-body">
 			<div class="mrgn-tp-md header-bg">
-              <h2 id="a1-7" class="mrgn-tp-0">Travailleurs autonomes</h2>
+              <h2 id="a1-7" class="mrgn-tp-0">Travailleurs autonomes&nbsp;</h2>
               <div class="brdr-bttm-fade"></div>
             </div>
             <br />
@@ -409,7 +409,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
       <div class="panel panel-default">
         <div class="panel-body">
 		  <div class="mrgn-tp-md header-bg">
-              <h2 id="a1-8" class="mrgn-tp-0">Province de résidence</h2>
+              <h2 id="a1-8" class="mrgn-tp-0">Province de résidence&nbsp;</h2>
               <div class="brdr-bttm-fade"></div>
             </div>
             <p>La province de résidence vous permet de sélectionner la province dans laquelle vous résidez et demandez des prestations d'assurance-emploi. Sélectionnez la province appropriée pour accéder à vos informations d'assurance-emploi.</p>
@@ -421,7 +421,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
       <div class="panel panel-default">
         <div class="panel-body">
 			<div class="mrgn-tp-md header-bg">
-              <h2 id="a1-9" class="mrgn-tp-0">Des erreurs, ça arrive</h2>
+              <h2 id="a1-9" class="mrgn-tp-0">Des erreurs, ça arrive&nbsp;</h2>
               <div class="brdr-bttm-fade"></div>
             </div>
             <br />
