--- a/scenarioA/services/my-account/MSCA/lobby-wax-fr.html
+++ b/scenarioA/services/my-account/MSCA/lobby-wax-fr.html
@@ -12,7 +12,7 @@
 
 <title>My Service Canada Account</title>
 <script type="text/javascript" src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_30/cdts/compiled/soyutils.js"></script> 
-<script type="text/javascript" src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_30/cdts/compiled/wet-en.js"></script>
+<script type="text/javascript" src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_30/cdts/compailed/wet-en.js"></script>
 <link href="https://srv241-s2.lab.hrdc-drhc.gc.ca/sc/sys2/msca-mdsc/portal-portail/pro/portal/page/portal/msca/private/static-content/msca-mdsc/css/msca-cdtn.css" rel="stylesheet"/>
 <noscript>
 <!--[if gte IE 9 | !IE ]><!-->
@@ -269,7 +269,7 @@ Dernière connexion:
     <div class="row mrgn-tp-md">
     <div class="col-xs-12 col-md-6 mrgn-bttm-md"> 
 		<a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/landing-page-ei-fr.html" class="brdr-lft brdr-rght brdr-tp brdr-bttm btn full-width">
-      <div class="h3 mrgn-tp-md text-center">Assurance-emploi</div>
+      <div class="h3 mrgn-tp-md text-center">Assurance-emploi<br /></div>
       </a> </div>
 	  
     <div class="col-xs-12 col-md-6"> 
