--- a/scenarioA/services/my-account/MSCA/lobby-wax-fr.html
+++ b/scenarioA/services/my-account/MSCA/lobby-wax-fr.html
@@ -262,7 +262,7 @@ Dernière connexion:
 
   <section>
     <div class="mrgn-tp-lg header-bg">
-      <h2>Our services</h2>
+      <h2>Nos services</h2>
       <div class="brdr-bttm-fade"></div>
     </div>
 	  <br />
@@ -283,7 +283,7 @@ Dernière connexion:
   <div class="row">
   <aside style="padding-left:10px;">
   <div class="mrgn-tp-lg header-bg">
-    <h2>Other services</h2>
+    <h2>Autres services</h2>
     <div class="brdr-bttm-fade"></div>
   </div>  <br />
 	 <!-- <div class="col-md-5">
