--- a/scenarioA/services/my-account/MSCA/lobby-wax-fr.html
+++ b/scenarioA/services/my-account/MSCA/lobby-wax-fr.html
@@ -257,7 +257,7 @@ Dernière ouverture de session&nbsp;:
 
 <p>Les feuillets de renseignements fiscaux T4E, T4A et NR4 pour 2019 sont  maintenant accessibles <strong>en ligne</strong> dans  la section Renseignements fiscaux de l&rsquo;Assurance-emploi (AE), du Régime de  pensions du Canada (RPC)/Sécurité de la vieillesse (SV). <strong>Les feuillets en  papier </strong>ont été envoyés avant<strong> la  fin de février. </strong></p>
 <h3 class="h4">Vérification de votre adresse</h3>
-  <p>Veuillez vérifier l&rsquo;exactitude de votre adresse postale dans Mon dossier  Service Canada (MDSC) dans la section Visualiser/modifier de l&rsquo;AE et du RPC/SV.  &nbsp;</p>
+  <p>Veuillez vérifier l&rsquo;exactitude de votre adresse postale dans Mon dossier  Service Canada (MDSC) dans la section Visualiser/modifier mes renseignements personnels de l&rsquo;AE et du RPC/SV.  &nbsp;</p>
 </section>
 
   <section>
