--- a/scenarioA/services/my-account/MSCA/landing-page-cpp-oas-fr.html
+++ b/scenarioA/services/my-account/MSCA/landing-page-cpp-oas-fr.html
@@ -195,7 +195,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
     </div>
     <nav role="navigation" id="wb-sm" data-trgt="mb-pnl" class="wb-menu visible-md visible-lg" typeof="SiteNavigationElement">
       <div class="pnl-strt container nvbar" lang="en">
-        <h2 class="wb-inv">Topics menu</h2>
+       <h2 class="wb-inv">Topics menu</h2>
         <div class="row">
           <ul class="list-inline menu" role="menubar">
             <li> <a
@@ -203,16 +203,16 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
             <li> <a href="#section1" class="item">Assurance-emploi</a>
               <ul class="sm list-unstyled" id="section1" role="menu">
                 <!--<li><a href="###">Status of my EI claim/application</a></li>-->
-                <li><a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/EI-payment-page-fr.html">Renseignements sur vos paiements</a></li>
+                <li><a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/EI-payment-page-fr.html">Renseignements relatifs à votre dernière demande de prestations d’assurance-emploi </a></li>
                  <li><a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/records-of-employment-fr.html">Relevés d'emploi</a></li>
-				  <li><a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/latest-claim-details-fr.html">Détails de ma dernière demande</a></li>
+				  <li><a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/latest-claim-details-fr.html">Dernière demande</a></li>
                
                 <li><a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/landing-page-ei-fr.html">Assurance-emploi - Plus</a></li>
               </ul>
             </li>
             <li> <a href="#section2" class="item">Régime de pensions du Canada/Pension de la Sécurité de vieillesse</a>
               <ul class="sm list-unstyled" id="section2" role="menu">
-                <li> <a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/Payment-Info-fr.html">Renseignements sur vos paiements</a> </li>
+                <li> <a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/Payment-Info-fr.html">Renseignements de paiements</a> </li>
 				  <li> <a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/CPP-Contributions-fr.html">Cotisations au RPC</a> </li>
                 
                 <!--<li> <a href="###"> Estimated monthly CPP benefits </a> </li>-->
