--- a/scenarioA/services/my-account/MSCA/landing-page-ei-fr.html
+++ b/scenarioA/services/my-account/MSCA/landing-page-ei-fr.html
@@ -386,7 +386,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
               <div class="brdr-bttm-fade"></div>
             </div>
             <br />
-          <p>Les formulaires en ligne <span class="btn btn-default">(Soumettre de nouveaux renseignements au sujet de ma demande)</span> vous permettent de fournir des renseignements par voie électronique.  Cette option s&rsquo;affiche uniquement si vous avez une demande active pour certains  types de prestations. </p>
+          <p>Les formulaires en ligne (Soumettre de nouveaux renseignements au sujet de ma demande) vous permettent de fournir des renseignements par voie électronique.  Cette option s&rsquo;affiche uniquement si vous avez une demande active pour certains  types de prestations. </p>
 <ul class="list-unstyled list-inline">
 			<li class="mrgn-bttm-sm"><button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/eForm/eForm-PNS-fr.html';" type="button" class="btn btn-default">Formulaires en ligne (Soumettre de nouveaux renseignements au sujet de ma demande)</button></li>
 		  </ul>
@@ -399,7 +399,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
               <div class="brdr-bttm-fade"></div>
             </div>
             <br />
-          <p>Avec la section <span class="btn btn-default">Statut de l'accord</span> (travailleur autonome), vous pouvez  vous inscrire, vérifier l&rsquo;état de votre accord pu mettre fin à votre accord de  travailleur autonome. </p>
+          <p>Avec la section Statut de l'accord (travailleur autonome), vous pouvez  vous inscrire, vérifier l&rsquo;état de votre accord pu mettre fin à votre accord de  travailleur autonome. </p>
 <ul class="list-unstyled list-inline">
 			<li class="mrgn-bttm-sm"><button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/self-employed-fr.html';" type="button" class="btn btn-default">Statut de l'accord (travailleurs autonomes)</button></li>
 		  </ul>
@@ -424,7 +424,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
               <div class="brdr-bttm-fade"></div>
             </div>
             <br />
-          <p>Sélectionnez Des erreurs,<span class="btn btn-default"> ça arrive</span> pour savoir comment signaler les  erreurs et faire des modifications. </p>
+          <p>Sélectionnez Des erreurs, ça arrive pour savoir comment signaler les  erreurs et faire des modifications. </p>
 <ul class="list-unstyled list-inline">
 			<li class="mrgn-bttm-sm"><button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/eForm/mistakes-can-happen-fr.html';" type="button" class="btn btn-default">Des erreurs, ça arrive</button></li>
 		  </ul>
