--- a/scenarioA/services/my-account/MSCA/landing-page-cpp-oas-fr.html
+++ b/scenarioA/services/my-account/MSCA/landing-page-cpp-oas-fr.html
@@ -210,14 +210,14 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
                 <li><a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/landing-page-ei-fr.html">Assurance-emploi - Plus</a></li>
               </ul>
             </li>
-            <li> <a href="#section2" class="item">Régime de pensions du Canada/Pension de la Sécurité de vieillesse</a>
+            <li> <a href="#section2" class="item">Régime de pensions du Canada/Sécurité de vieillesse</a>
               <ul class="sm list-unstyled" id="section2" role="menu">
                 <li> <a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/Payment-Info-fr.html">Renseignements de paiements</a> </li>
 				  <li> <a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/CPP-Contributions-fr.html">Cotisations au RPC</a> </li>
                 
                 <!--<li> <a href="###"> Estimated monthly CPP benefits </a> </li>-->
                 <li> <a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/Application-status-fr.html">L'état de demande</a> </li>
-                <li> <a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/landing-page-cpp-oas-fr.html"> Régime de pensions du Canada/Pension de la Sécurité de vieillesse - Plus </a> </li>
+                <li> <a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/landing-page-cpp-oas-fr.html"> Régime de pensions du Canada/Sécurité de vieillesse - Plus </a> </li>
               </ul>
             </li>
           </ul>
