--- a/scenarioA/services/my-account/MSCA/landing-page-ei-fr.html
+++ b/scenarioA/services/my-account/MSCA/landing-page-ei-fr.html
@@ -290,7 +290,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
         <div class="panel panel-default">
           <div class="panel-body">
             <div class="mrgn-tp-md header-bg">
-              <h2 id="a1-1" class="mrgn-tp-0">Renseignements relatifs à votre dernière demande de prestations d’assurance-emploi &nbsp;</h2>
+              <h2 id="a1-1" class="mrgn-tp-0">Renseignements relatifs à votre dernière demande&nbsp;</h2>
               <div class="brdr-bttm-fade"></div>
             </div>
             <p>En sélectionnant Visualiser l&rsquo;état de ma demande et ma correspondance  (Alertez-moi), vous pouvez vérifier l&rsquo;état de votre dernière demande et vos  messages.</p>
