--- a/scenarioA/services/my-account/MSCA/landing-page-cpp-oas-fr.html
+++ b/scenarioA/services/my-account/MSCA/landing-page-cpp-oas-fr.html
@@ -283,7 +283,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
       </div>
     </div>
     <div class="col-xs-12 col-md-9">
-      <p>Consultez nos outils en ligne sur la pension ci-dessous.</p>
+      <p>Consultez nos outils en ligne sur la pension de Régime de pensions du Canada (RPC), la Sécurité de vieillesse (SV) et le Supplément de revenu garanti (SRG) ci-dessous.</p>
 <div class="panel panel-default">
         <div class="panel-body">
           <div class="mrgn-tp-md header-bg">
