--- a/scenarioA/services/my-account/MSCA/landing-page-cpp-oas.html
+++ b/scenarioA/services/my-account/MSCA/landing-page-cpp-oas.html
@@ -283,7 +283,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
       </div>
     </div>
     <div class="col-xs-12 col-md-9">
-      <p>Take a look at our online Pension tools below.</p>
+      <p>Take a look at our online Pension tools for Canada Pension Plan (CPP), Old Age Security (OAS), and the Guaranteed Income Supplement (GIS) below.</p>
       <div class="panel panel-default">
         <div class="panel-body">
           <div class="mrgn-tp-md header-bg">
