--- a/scenarioA/services/my-account/MSCA/landing-page-ei-fr.html
+++ b/scenarioA/services/my-account/MSCA/landing-page-ei-fr.html
@@ -203,7 +203,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
             <li> <a href="#section1" class="item">Assurance-emploi</a>
               <ul class="sm list-unstyled" id="section1" role="menu">
                 <!--<li><a href="###">Status of my EI claim/application</a></li>-->
-                <li><a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/EI-payment-page-fr.html">Renseignements relatifs à votre dernière demande de prestations d’assurance-emploi </a></li>
+                <li><a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/EI-payment-page-fr.html">Renseignements relatifs à votre dernière demande</a></li>
                  <li><a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/records-of-employment-fr.html">Relevés d'emploi</a></li>
 				  <li><a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/latest-claim-details-fr.html">Dernière demande</a></li>
                
