--- a/scenarioA/services/my-account/MSCA/landing-page-ei-fr.html
+++ b/scenarioA/services/my-account/MSCA/landing-page-ei-fr.html
@@ -280,7 +280,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
       </div>
     </div>
     <div class="col-xs-12 col-md-9">
-      <p>Dans cette page, vous pouvez obtenir les renseignements concernant vos  demandes de prestations d&rsquo;assurance-emploi. Vous pouvez également gérer votre  compte&nbsp;: </p>
+      <p>Sur cette page, vous pouvez obtenir les renseignements concernant vos  demandes de prestations d&rsquo;assurance-emploi (A.-E.). Vous pouvez également gérer votre  compte&nbsp;: </p>
       <ul>
         <li>mettre à jour vos  coordonnées;</li>
         <li>modifier vos renseignements  concernant le dépôt direct;</li>
@@ -399,7 +399,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
               <div class="brdr-bttm-fade"></div>
             </div>
             <br />
-          <p>Avec la section Statut de l'accord (travailleur autonome), vous pouvez  vous inscrire, vérifier l&rsquo;état de votre accord pu mettre fin à votre accord de  travailleur autonome. </p>
+          <p>Avec la section Statut de l'accord (travailleur autonome), vous pouvez  vous inscrire, vérifier l&rsquo;état de votre accord ou mettre fin à votre accord de  travailleur autonome. </p>
 <ul class="list-unstyled list-inline">
 			<li class="mrgn-bttm-sm"><button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/self-employed-fr.html';" type="button" class="btn btn-default">Statut de l'accord (travailleurs autonomes)</button></li>
 		  </ul>
