--- a/scenarioA/services/my-account/MSCA/landing-page-cpp-oas-fr.html
+++ b/scenarioA/services/my-account/MSCA/landing-page-cpp-oas-fr.html
@@ -283,7 +283,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
       </div>
     </div>
     <div class="col-xs-12 col-md-9">
-      <p>Consultez nos outils en ligne sur la pension de Régime de pensions du Canada (RPC), la Sécurité de vieillesse (SV) et le Supplément de revenu garanti (SRG) ci-dessous.</p>
+      <p>Consultez nos outils en ligne sur la pension pour le Régime de pensions du Canada (RPC), la Sécurité de vieillesse (SV) et le Supplément de revenu garanti (SRG) ci-dessous.</p>
 <div class="panel panel-default">
         <div class="panel-body">
           <div class="mrgn-tp-md header-bg">
@@ -321,7 +321,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
             <div class="brdr-bttm-fade"></div>
           </div>
           <br />
-          <p>Si vous vous êtes absenté du travail ou avez travaillé moins pour vous  occuper de vos jeunes enfants, vous pourriez être en mesure de faire augmenter  le montant de votre pension du RPC et d&rsquo;autres prestations du RPC grâce à la  clause d&rsquo;exclusion pour élever des enfants.</p>
+          <p>Si vous vous êtes absenté du travail ou avez moins travaillé pour vous  occuper de vos jeunes enfants, vous pourriez être en mesure de faire augmenter  le montant de votre pension du RPC et d&rsquo;autres prestations du RPC grâce à la  clause d&rsquo;exclusion pour élever des enfants.</p>
 <ul class="list-unstyled list-inline">
 			<li class="mrgn-bttm-sm"><button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/Request-Child-Rearing-Provision.html';" type="button" class="btn btn-default">Demander ma clause pour élever des enfants</button></li>
           <li class="mrgn-bttm-sm"><button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/Child-Rearing-Provision-Confirm-Info.html';" type="button" class="btn btn-default">Ma clause pour élever des enfants</button></li>
