--- a/scenarioA/services/my-account/MSCA/landing-page-ei-fr.html
+++ b/scenarioA/services/my-account/MSCA/landing-page-ei-fr.html
@@ -251,7 +251,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
         
         <!-- List group -->
         <ul class="list-group">
-          <li class="list-group-item"><a href="#a1-1">Renseignements relatifs à votre dernière demande de prestations d’assurance-emploi</a></li>
+          <li class="list-group-item"><a href="#a1-1">Renseignements relatifs à votre dernière demande</a></li>
           <li class="list-group-item"><a href="#a1-2">Visualiser/modifier mes renseignements personnels</a></li>
           <li class="list-group-item"><a href="#a1-3">Relevés d'emploi</a></li>
           <li class="list-group-item"><a href="#a1-4">Renseignements fiscaux</a></li>
