--- a/scenarioA/services/my-account/MSCA/landing-page-ei-fr.html
+++ b/scenarioA/services/my-account/MSCA/landing-page-ei-fr.html
@@ -315,7 +315,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
               <div class="brdr-bttm-fade"></div>
             </div>
             <br />
-            <p>Dans cette section, vous pouvez vérifier et modifier votre adresse  postale, votre numéro de téléphone, les renseignements pour le dépôt direct et  votre langue de préférence. Les modifications ne peuvent être faites que  directement dans Mon dossier Service Canada – AE pendant les heures d&rsquo;ouverture  de votre province ou territoire.</p>
+            <p>Dans cette section, vous pouvez vérifier et modifier votre adresse  postale, votre numéro de téléphone, les renseignements pour le dépôt direct et  votre langue de préférence. Les modifications ne peuvent être faites que  directement dans Mon dossier Service Canada – A.-E pendant les heures d&rsquo;ouverture  de votre province ou territoire.</p>
 <details>
               <summary><!--Service times-->Heures d’ouverture de votre province ou territoire</summary>
               <ul>
@@ -373,7 +373,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
               <h2 id="a1-5" class="mrgn-tp-0">Demandes antérieures&nbsp;</h2>
               <div class="brdr-bttm-fade"></div>
           </div>
-            <p>La section Demandes antérieures affiche les demandes de prestation d&rsquo;AE  antérieures. Vous pouvez sélectionner une demande pour des renseignements  précis, notamment le détail des versements. </p>
+            <p>La section Demandes antérieures affiche les demandes de prestation d&rsquo;A.-E. antérieures. Vous pouvez sélectionner une demande pour des renseignements  précis, notamment le détail des versements. </p>
 <ul class="list-unstyled list-inline">
 			<li class="mrgn-bttm-sm"> <button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/past-claims-fr.html';" type="button" class="btn btn-default">Demandes antérieures</button></li>
 		  </ul>
@@ -411,7 +411,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
               <h2 id="a1-8" class="mrgn-tp-0">Province de résidence&nbsp;</h2>
               <div class="brdr-bttm-fade"></div>
           </div>
-            <p>La section Province de résidence sert à sélectionner la province dans  laquelle vous vivez et demandez des prestations d&rsquo;AE. Vous devez sélectionner  la province exacte afin d&rsquo;accéder à vos renseignements relatifs à l&rsquo;AE. </p>
+            <p>La section Province de résidence sert à sélectionner la province dans  laquelle vous vivez et demandez des prestations d&rsquo;A.-E. Vous devez sélectionner  la province exacte afin d&rsquo;accéder à vos renseignements relatifs à l&rsquo;A.-E. </p>
 <ul class="list-unstyled list-inline">
 			<li class="mrgn-bttm-sm"><button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/province-fr.html';" type="button" class="btn btn-default">Province de résidence</button></li>
 		  </ul>
