--- a/scenarioA/services/my-account/MSCA/landing-page-ei-fr.html
+++ b/scenarioA/services/my-account/MSCA/landing-page-ei-fr.html
@@ -315,7 +315,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
               <div class="brdr-bttm-fade"></div>
             </div>
             <br />
-            <p>Dans cette section, vous pouvez vérifier et modifier votre adresse  postale, votre numéro de téléphone, les renseignements pour le dépôt direct et  votre langue de préférence. Les modifications ne peuvent être faites que  directement dans Mon dossier Service Canada – A.-E pendant les heures d&rsquo;ouverture  de votre province ou territoire.</p>
+            <p>Dans cette section, vous pouvez vérifier et modifier votre adresse  postale, votre numéro de téléphone, les renseignements pour le dépôt direct et  votre langue de préférence. Les modifications ne peuvent être faites que  directement dans Mon dossier Service Canada – A.-E. pendant les heures d&rsquo;ouverture  de votre province ou territoire.</p>
 <details>
               <summary><!--Service times-->Heures d’ouverture de votre province ou territoire</summary>
               <ul>
