--- a/scenarioA/services/my-account/MSCA/landing-page-cpp-oas-fr.html
+++ b/scenarioA/services/my-account/MSCA/landing-page-cpp-oas-fr.html
@@ -210,14 +210,14 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
                 <li><a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/landing-page-ei-fr.html">Assurance-emploi - Plus</a></li>
               </ul>
             </li>
-            <li> <a href="#section2" class="item">Régime de pensions du Canada/Sécurité de vieillesse</a>
+            <li> <a href="#section2" class="item">Régime de pensions du Canada/Sécurité la de vieillesse</a>
               <ul class="sm list-unstyled" id="section2" role="menu">
                 <li> <a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/Payment-Info-fr.html">Renseignements de paiements</a> </li>
 				  <li> <a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/CPP-Contributions-fr.html">Cotisations au RPC</a> </li>
                 
                 <!--<li> <a href="###"> Estimated monthly CPP benefits </a> </li>-->
                 <li> <a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/Application-status-fr.html">L'état de demande</a> </li>
-                <li> <a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/landing-page-cpp-oas-fr.html"> Régime de pensions du Canada/Sécurité de vieillesse - Plus </a> </li>
+                <li> <a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/landing-page-cpp-oas-fr.html"> Régime de pensions du Canada/Sécurité de la vieillesse - Plus </a> </li>
               </ul>
             </li>
           </ul>
@@ -238,7 +238,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
 </div>
 <section class="container">
 <main class="container" property="mainContentOfPage" role="main"><span id="pageTemplate:j_id__ctru6pc6" class="af_panelGroupLayout">
-  <h1 property="name" id="wb-cont" dir="ltr">Régime de pensions du Canada/Sécurité de vieillesse</h1>
+  <h1 property="name" id="wb-cont" dir="ltr">Régime de pensions du Canada/Sécurité de la vieillesse</h1>
   <!--<section class="alert alert-warning">
     <h2 class="h3">Attention</h2>
     <p>Please be advised that this service will be unavailable from 6:00 a.m. to 8:00 a.m. on Sunday, March 17, 2019 (Eastern Time) to permit system maintenance. We apologize for any inconvenience. </p>
@@ -270,7 +270,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
           <li class="list-group-item"><a href="">Présenter ma demande de pension de survivant du RPC</a>&nbsp;<span class="glyphicon glyphicon-share"></span></li>
           <li class="list-group-item"><a href="">Apply for my CPP children's benefit</a>&nbsp;<span class="glyphicon glyphicon-share"></span></li>
           <li class="list-group-item"><a href="">Présenter ma demande de prestations d'enfant du RPC</a>&nbsp;<span class="glyphicon glyphicon-share"></span></li>
-          <li class="list-group-item"><a href="">Présenter ma demande de Pension de SV</a>&nbsp;<span class="glyphicon glyphicon-share"></span></li>
+          <li class="list-group-item"><a href="">Présenter ma demande de Pension de la SV</a>&nbsp;<span class="glyphicon glyphicon-share"></span></li>
           <li class="list-group-item"><a href="">Présenter ma demande de supplément de revenu garanti</a>&nbsp;<span class="glyphicon glyphicon-share"></span></li>
           <li class="list-group-item"><a href="">Présenter ma demande de programme d'Allocation</a>&nbsp;<span class="glyphicon glyphicon-share"></span></li>
           <li class="list-group-item"><a href="">Présenter ma demande de programme d'Allocation au survivant</a>&nbsp;<span class="glyphicon glyphicon-share"></span></li>
