--- a/scenarioA/services/my-account/MSCA/landing-page-ei.html
+++ b/scenarioA/services/my-account/MSCA/landing-page-ei.html
@@ -254,7 +254,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
           <li class="list-group-item"><a href="#a1-1">Information on your latest claim</a></li>
           <li class="list-group-item"><a href="#a1-2">View/Change my Personal Information</a></li>
           <li class="list-group-item"><a href="#a1-3">Records of Employment</a></li>
-          <li class="list-group-item"><a href="#a1-4">Tax information</a></li>
+          <li class="list-group-item"><a href="#a1-4">Tax Information</a></li>
           <li class="list-group-item"><a href="#a1-5">Past claims</a></li>
           <li class="list-group-item"><a href="#a1-6">eForms</a></li>
           <li class="list-group-item"><a href="#a1-7">Self-employed</a></li>
@@ -357,7 +357,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
       <div class="panel panel-default">
         <div class="panel-body">
 			<div class="mrgn-tp-md header-bg">
-              <h2 id="a1-4" class="mrgn-tp-0">Tax information</h2>
+              <h2 id="a1-4" class="mrgn-tp-0">Tax Information</h2>
               <div class="brdr-bttm-fade"></div>
             </div>
             <br />
