--- a/scenarioA/services/my-account/MSCA/landing-page-cpp-oas.html
+++ b/scenarioA/services/my-account/MSCA/landing-page-cpp-oas.html
@@ -254,7 +254,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
           <li class="list-group-item"><a href="#a1-1">CPP Applications</a></li>
           <li class="list-group-item"><a href="#a1-2">OAS/GIS Pension Applications</a></li>
            <li class="list-group-item"><a href="#a1-6">Child-Rearing Provision</a></li>
-			<li class="list-group-item"><a href="#a1-7">Tax information</a></li>
+			<li class="list-group-item"><a href="#a1-7">Tax Information</a></li>
 			<li class="list-group-item"><a href="#a1-3">View/Change my Personal Information</a></li>
           <li class="list-group-item"><a href="#a1-4">Payments</a></li>
 			<li class="list-group-item"><a href="#a1-5">Contributions</a></li>
@@ -334,7 +334,7 @@ a.btn-blue:hover, a.btn-blue:active, a.btn-blue:focus {
 		 <div class="panel panel-default">
         <div class="panel-body">
           <div class="mrgn-tp-md header-bg">
-            <h2 id="a1-7" class="mrgn-tp-0">Tax information&nbsp;</h2>
+            <h2 id="a1-7" class="mrgn-tp-0">Tax Information&nbsp;</h2>
             <div class="brdr-bttm-fade"></div>
           </div>
           <br />
